Chat history support and compaction